--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,5 +1,5 @@
 @use "/node_modules/bootstrap/scss/bootstrap";
 body {
   background-color: rgb(212, 143, 56);
-  color: aliceblue;
+  color: rgb(0, 0, 0);
 }
